新增活動清單清單內容
Refresh.java
refresh.xml
simplelist.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
 
         <activity android:name=".Select" />
         <activity android:name=".FriendList" />
-        <activity android:name=".ActivityList"></activity>
+        <activity android:name=".ActivityList" />
+        <activity android:name=".Refresh"></activity>
     </application>
 
 </manifest>
