新增填寫活動細節與加入成員功能
MapSelect.java
Activity_Title.java
AndroidManifest.xml
activity_title.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
 
         <activity
             android:name=".MapSelect"
-            android:label="@string/title_activity_map_select"></activity>
+            android:label="@string/title_activity_map_select" />
+        <activity android:name=".Activity_Title"></activity>
     </application>
 
 </manifest>
