新增顯示地圖與成員位置
ActivityList.java
Activity_Title.java
MapActivity.java
AndroidManifest.xml
map_activity.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         <activity
             android:name=".MapSelect"
             android:label="@string/title_activity_map_select" />
-        <activity android:name=".Activity_Title"></activity>
+        <activity android:name=".Activity_Title" />
+        <activity android:name=".MapActivity"></activity>
     </application>
 
 </manifest>
